--- a/1.html
+++ b/1.html
@@ -12,7 +12,32 @@
   <li><a href="3.html">JavaScript</a></li>
  </ol>
  <h2>HTML</h2>
+ <p>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/tZooW6PritE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ </p>
  <p><a href="http://www.w3.org/TR/html4/#:~:text=This%20specification%20defines%20the%20HyperText%20Markup%20Language%20%28HTML%29%2C,3.2%20%5BHTML32%5D%20and%20HTML%202.0%20%5BRFC1866%5D%20%29%2C%20/" target="-blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the stnadard markup language for <strong>creating <u>web</u> pages</strong> and web applications. Web browsers receive HTML documents from a web server of from loval storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
  <img src="code.jpg" width="100%">
  </p><p style="margin-top:45px;"> HTML elements are the buliding blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, mat be embeded into the rendered page. It provides a means to create structured documents by denoting structual semantics for text such as headings, paragraphs, lists, links, quotes, and other items. HTML elements are delineated by tags, written using angle brackets.
+<p>
+  <div id="disqus_thread"></div>
+  <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://web12-10.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</P>
+
 </body>
